src/App.css
@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,700&display=swap");
:root {
  --sidebar-flex: 1.5;
  --condiv-flex: 6;
  --fontsize-p: 1.2rem;
  --fontsize-nav: 1.6rem;
  --typing-font: 3rem;
}
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Raleway";
}

.App {
  display: flex;
  width: 100vw;
  min-height: 100vh;
}

/* .condiv class is for the right side content container*/
.condiv {
  padding: 100px;
  background-color: #f4f5f9;
  flex: var(--condiv-flex);
}

nav {
  padding: 60px 30px 0px 30px;
  flex: var(--sidebar-flex);
  background: rgb(67, 34, 214);
  background: linear-gradient(
    180deg,
    rgb(67, 34, 214) 50%,
    rgba(132, 124, 252, 1) 80%
  );
}

nav ul {
  font-size: var(--fontsize-nav);
  text-align: center;
  list-style-type: none;
  text-decoration: none !important;
  color: white !important;
}

nav ul li {
  margin: 40px;
  font-size: var(--fontsize-nav);
  text-align: center;
  list-style-type: none;
  text-decoration: none !important;
  color: white !important;
}

.navitem:link {
  font-size: var(--fontsize-nav);
  text-align: center;
  list-style-type: none;
  text-decoration: none !important;
  color: white !important;
}

.navitem:visited {
  font-size: var(--fontsize-nav);
  text-align: center;
  list-style-type: none;
  text-decoration: none !important;
  color: white !important;
}

.active {
  font-weight: bolder;
}

.social {
  position: absolute;
  margin-top: 20px;
  display: flex;
  bottom: 60px;
}

.icon {
  padding: 30px 10px;
  height: 30px;
  width: 30px;
  color: #9a9b9c;
}

.icon:hover {
  color: #000000;
}

.home {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}
.profilepic {
  border-radius: 50%;
  width: 200px;
  margin: 30px;
}
.typingeffect {
  font-size: var(--typing-font);
  margin-bottom: 30px;
}

a {
  text-decoration: none;
  color: white;
}
@media all and (max-width: 450px) {
  :root {
    --fontsize-nav: 1rem;
    --sidebar-flex: 0;
    --typing-font: 2rem;
  }
  .App {
    flex-direction: column;
  }

  .sidebar {
    padding: 30px;
    background: rgb(67, 34, 214);
    background: linear-gradient(
      90deg,
      rgb(67, 34, 214) 50%,
      rgba(132, 124, 252, 1) 80%
    );
  }
  .condiv {
    padding: 50px;
  }
  nav ul {
    display: flex;
  }
  nav ul li {
    margin: 10px;
  }
  .social {
    left: 0;
    width: 100vw;
    display: flex;
    justify-content: space-around;
    bottom: 30px;
  }
  .social i {
    padding-right: 0px;
  }
}

